[gd_scene load_steps=15 format=3 uid="uid://dq5kitkbpxa6u"]

[ext_resource type="Script" uid="uid://dhcneg0aaclpu" path="res://scripts/crab.gd" id="1_rq6vx"]
[ext_resource type="Texture2D" uid="uid://cqrr0ogop2t6q" path="res://assets/img/Crab sprites V1.png" id="3_83q5x"]
[ext_resource type="AudioStream" uid="uid://c5dk1r67t7q87" path="res://assets/audio/Jump SFX.ogg" id="3_rftv6"]
[ext_resource type="AudioStream" uid="uid://isjn5twkc1aa" path="res://assets/audio/Dive SFX.ogg" id="4_hj1h3"]

[sub_resource type="AtlasTexture" id="AtlasTexture_i3pe7"]
atlas = ExtResource("3_83q5x")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ht0n"]
atlas = ExtResource("3_83q5x")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ohasv"]
atlas = ExtResource("3_83q5x")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xkaa1"]
atlas = ExtResource("3_83q5x")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5a2q8"]
atlas = ExtResource("3_83q5x")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ixvkc"]
atlas = ExtResource("3_83q5x")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pkxn6"]
atlas = ExtResource("3_83q5x")
region = Rect2(320, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_q4iun"]
animations = [{
"frames": [],
"loop": true,
"name": &"Duck",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i3pe7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ht0n")
}],
"loop": true,
"name": &"Idle",
"speed": 0.6
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ohasv")
}],
"loop": true,
"name": &"Jump",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xkaa1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5a2q8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ixvkc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pkxn6")
}],
"loop": true,
"name": &"Run",
"speed": 1.2
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_83q5x"]
radius = 8.0
height = 20.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_rftv6"]
radius = 8.25
height = 19.75

[node name="Crab" type="CharacterBody2D"]
scale = Vector2(8, 8)
script = ExtResource("1_rq6vx")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_q4iun")
animation = &"Run"
autoplay = "Idle"

[node name="RunCol" type="CollisionShape2D" parent="."]
visibility_layer = 2
position = Vector2(0.375, 4.375)
shape = SubResource("CapsuleShape2D_83q5x")

[node name="DuckCol" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 4.375)
shape = SubResource("CapsuleShape2D_rftv6")

[node name="JumpSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_rftv6")
volume_db = -10.0

[node name="DiveSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_hj1h3")
volume_db = -10.0

[node name="HoverTimer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[connection signal="timeout" from="HoverTimer" to="." method="end_hover"]
